# VitaDLNA

./: CMakeLists.txt
.github/workflows/: main.yml
github/workflows/: build.yml
sce_sys/: param.sfo
src/: dlna.h  dlna_server.c  http_server.c  http_server.h  main.c  network.c  network.h  soap_server.c  ssdp.c  ssdp.h  utils.c c  utils.h  video_player.c  video_player.h
